Fixed rounded bottom right border on narrow displays.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -2456,6 +2456,11 @@ sender-column-width = 150px
       outline 0
       box-shadow inset 0 0 8px rgba(0,0,0, 0.5)
 
+// At this width, we do not show the .room-members-sidebar
+@media (max-width: 700px)
+  .send-message-area
+    border-bottom-right-radius 6px
+
 .autocomplete
   position absolute
   left 10px
